[package]
name = "pof-tools"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17"
egui = "0.17.0"
epi = "0.17"
glium = "0.31"
egui_glium = "0.17"
pof = { path = "pof" }
nalgebra-glm = "0.16.0"
native-dialog = "0.6.3"
crossbeam = "0.8.1"
image = "0.24.1"
# for logging
simplelog = "0.11.2"
log = "0.4.14"
# for panic handling
backtrace = "0.3.64"
once_cell = "1.10"
# for display starup log date/time
chrono = "0.4.19"
# for... gltf
gltf = "1.0"
