[package]
name = "pof-tools"
version = "1.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"
eframe = "0.26.2"
egui = "0.26.2"
glium = "0.34"
# egui_glium = "0.23.0"
egui_glium = { git = "https://github.com/Baezon/egui_glium", branch = "v26_2", version = "0.26.2" }
pof = { path = "pof" }
nalgebra-glm = "0.18.0"
native-dialog = "0.6.3"
crossbeam = "0.8.1"
image = "0.24.1"
# for logging
simplelog = { version = "0.12.1", default-features = false }
log = "0.4.14"
# for panic handling
backtrace = "0.3.64"
once_cell = "1.10"
# for display starup log date/time
chrono = "0.4.19"
itertools = "0.10.3"
undo = "0.47.2"
