[package]
name = "pof"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
#dae-parser = {path = "dae-parser-0.8.3", features = ["nalgebra"]}
dae-parser = {version = "0.8.4", features = ["nalgebra"]}
walkdir = "2"
nalgebra = "0.30.1"
nalgebra-glm = "0.16"

[[bin]]
name = "pof"
path = "src/main.rs"
doc = false