[package]
name = "pof"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
#dae-parser = {path = "dae-parser-0.8.3", features = ["nalgebra"]}
dae-parser = {version = "0.10", features = ["nalgebra"]}
walkdir = "2"
nalgebra = "0.32"
nalgebra-glm = "0.18"
# for... gltf
gltf = "1.3.0"
urlencoding = "2.1"
gltf-json = "1.3.0"
base64 = "0.13"
itertools = "0.10.3"
log = "0.4.14"
[[bin]]
name = "pof"
path = "src/main.rs"
doc = false
